--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
         <main>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-12">
                     <div class="sticky-top pt-3">
                         <div class="sensor-panel mb-4">
                             <h4 class="mb-3">Sensor auswählen</h4>
