Neue Funktionen: Sensorfarben fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,12 @@
 
         <main>
             <div class="row">
-                <div class="col-12">
+                <div class="col">  fefef
                     <div class="sticky-top pt-3">
                         <div class="sensor-panel mb-4">
                             <h4 class="mb-3">Sensor auswählen</h4>
-                            <div class="sensor-buttons d-flex flex-wrap justify-content-between">
+                            <div class="sensor-buttons d-grid" style="grid-template-columns: repeat(6, 1fr); gap: 0.3rem;">
+
                                 <button class="btn btn-outline-primary sensor-button m-1 px-3 py-2" style="width: 47%;"
                                     data-sensor-id="MQ2">
                                     <div class="d-flex flex-column align-items-center text-center">
