--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,7 @@
   .sensor-button {
     transition: all 0.3s ease-in-out;
     min-height: 40px;
-    max-width: 70px;
+    min-width: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
