--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,7 @@
   .sensor-button {
     transition: all 0.3s ease-in-out;
     min-height: 40px;
-    min-width: 200px;
+    min-width: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -120,6 +120,10 @@
     width: 100%;
     height: 400px;
     margin: 0 auto;
+    max-width: 960px;
+    display: flex;
+    align-items: center;
+    justify-self: center;
   }
   
   /* CSV data preview table */
@@ -171,3 +175,27 @@
   color: white;
   border-color: #0d6efd;
  }
+
+.card {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 960px; /* oder ein anderer Wert, je nach gewünschter Breite */
+  width: 100%;
+}
+
+
+.sensor-buttons {
+  display: grid;
+  grid-template-columns: repeat(6, auto); /* oder 1fr */
+  gap: 0.6rem;
+  justify-content: center; /* <- das zentriert */
+}
+
+
+
+.language-switch .btn.active-language {
+  background-color: white;
+  color: black;
+  border-color: white;
+}
+
