--- a/static/css/style.css
+++ b/static/css/style.css
@@ -199,3 +199,22 @@
   border-color: white;
 }
 
+#btn-live .dot {
+  height: 12px;
+  width: 12px;
+  background-color: red;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 5px;
+  animation: none;
+}
+
+#btn-live.blinking .dot {
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0%   { opacity: 1; }
+  50%  { opacity: 0; }
+  100% { opacity: 1; }
+}
