--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,3 +218,10 @@
   50%  { opacity: 0; }
   100% { opacity: 1; }
 }
+
+
+#btn-live.live-active {
+  background-color: rgb(7, 7, 44); /* dunkleres Violett z. B. für Bootstrap-Primary */
+  color: white;
+  border-color: rgb(196, 196, 213);
+}
