--- a/templates/live.html
+++ b/templates/live.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="de" data-bs-theme="dark">
 
@@ -209,11 +210,9 @@
 
     </div>
 
-
-    </html>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    </html>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="{{ url_for('static', filename='js/live.js') }}"></script>
 </body>
+
+</html>
