erste Version test Modus, noch unklar

--- a/templates/live.html
+++ b/templates/live.html
@@ -16,6 +16,10 @@
     <div class="container py-4">
         <header class="app-header text-center position-relative">
             <div class="language-switch position-absolute top-0 end-0 p-2">
+                <!-- test graphik link -->
+                <a href="/test" class="btn btn-sm btn-outline-info me-2">🔁 Test-Modus</a>
+
+
                 <button id="btn-live" class="btn btn-sm btn-outline-danger ms-2">
                     <span class="dot"></span> Live
                 </button>
