--- a/templates/live.html
+++ b/templates/live.html
@@ -142,6 +142,8 @@
                     </div>
 
                     <div class="card-body visualization-container">
+
+
                         <!-- Ladespinner -->
                         <div id="loading-spinner" class="spinner-border loading-spinner d-none" role="status">
                             <span class="visually-hidden" data-i18n="loading">Lade...</span>
@@ -152,9 +154,10 @@
                             <!-- Wird dynamisch befüllt -->
                         </div>
 
-                        <!-- Plot-Container -->
+                   <!-- Plot-Container -->
                         <div id="chart-container" class="chart-container">
                             <div id="plot" style="width: 100%; height: 400px;"></div>
+                            <div id="sensor-values" class="d-flex flex-wrap gap-3 mt-4"></div>
                         </div>
 
                         <!-- Hinweis bei Nicht-Auswahl -->
