--- a/templates/live.html
+++ b/templates/live.html
@@ -158,6 +158,7 @@
                         <div id="chart-container" class="chart-container">
                             <div id="plot" style="width: 100%; height: 400px;"></div>
                             <div id="sensor-values" class="d-flex flex-wrap gap-3 mt-4"></div>
+                            <button id="refresh-button" class="btn btn-warning mt-3">🔄 Reset</button>
                         </div>
 
                         <!-- Hinweis bei Nicht-Auswahl -->
