--- a/templates/live.html
+++ b/templates/live.html
@@ -169,6 +169,14 @@
                         </div>
                     </div>
 
+
+                    <div class = "card mt-3">
+                       <div class="card-body">
+                           <h5>Zusätzlicher Bereich</h5>
+                          <p>Dies ist ein zusätzlicher Container oberhalb des bisherigen Kartenblocks.</p>
+                        </div>
+
+                    </div>
                     <div class="card mt-3">
                         <div class="card-body">
                             <h5 data-i18n="aboutSensors">Über die MQ-Gassensoren</h5>
