--- a/templates/live.html
+++ b/templates/live.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de" data-bs-theme="dark">
 
@@ -154,7 +153,7 @@
                             <!-- Wird dynamisch befüllt -->
                         </div>
 
-                   <!-- Plot-Container -->
+                        <!-- Plot-Container -->
                         <div id="chart-container" class="chart-container">
                             <div id="plot" style="width: 100%; height: 400px;"></div>
                             <div id="sensor-values" class="d-flex flex-wrap gap-3 mt-4"></div>
@@ -170,13 +169,13 @@
                     </div>
 
 
-                    <div class = "card mt-3">
-                       <div class="card-body">
-                           <h5>Zusätzlicher Bereich</h5>
-                          <p>Dies ist ein zusätzlicher Container oberhalb des bisherigen Kartenblocks.</p>
+                    <div id="sensor-value-box" class="card mt-3">
+                        <div class="card-body">
+                            <h5 class="mb-3">Live-Sensorwerte</h5>
+                            <div id="sensor-value-output" class="d-flex flex-wrap gap-3"></div>
                         </div>
-
                     </div>
+
                     <div class="card mt-3">
                         <div class="card-body">
                             <h5 data-i18n="aboutSensors">Über die MQ-Gassensoren</h5>
