--- a/templates/live.html
+++ b/templates/live.html
@@ -157,7 +157,7 @@
                         <div id="chart-container" class="chart-container">
                             <div id="plot" style="width: 100%; height: 400px;"></div>
                             <div id="sensor-values" class="d-flex flex-wrap gap-3 mt-4"></div>
-                            <button id="refresh-button" class="btn btn-warning mt-3">🔄 Reset</button>
+                          
                         </div>
 
                         <!-- Hinweis bei Nicht-Auswahl -->
@@ -167,6 +167,15 @@
                             </p>
                         </div>
                     </div>
+
+                    <div id="refresh-button-box" class="card mt-3">
+  <div class="card-body text-center">
+    <p id="refresh-explainer" data-i18n="refreshInfo">
+      Push the button to refresh the plot and remove all active sensors.
+    </p>
+    <button id="refresh-button" class="btn btn-warning mt-2">🔄 Reset</button>
+  </div>
+</div>
 
 
                     <div id="sensor-value-box" class="card mt-3">
