--- a/templates/live.html
+++ b/templates/live.html
@@ -259,10 +259,16 @@
                                 </small>
                             </p>
 
+                            
                             <!-- THE REAL TIME SIMULATION WINDOW below -->
+                            <!-- log plot box -->
                             <div id="live-output"
                                 style="white-space:pre;font-family:monospace;background:#181a1b;color:#fff;padding:12px;border-radius:8px;min-height:160px">
                             </div>
+
+                            
+
+
 
                         </div>
                     </div>
